Initial commit: Java microservices project with Flutter frontend